# fv2d

./: .clang-format  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  BodyForces.h  BoundaryConditions.h  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  ComputeDt.h  FluxContainer.h  Geometry.h  GeometryMappings.h  Gradient.h  Gravity.h  Heating.h  Helpers.h  IOManager.h  Init.h  LinAlg.h  README.md  RiemannSolvers.h  RiemannSolvers_rot.h  SaveSolution.h  SimInfo.h  Sources.h  Spline.h  States.h  StatesHydro.h  StatesMHD.h  TODO.md  ThermalConduction.h  Update.h  Update_rot_unused.h  Viscosity.h  clang++-libc++  last.ini  main.cpp  polyfit.h  (+2 more)
docs/: conf.py  index.rst
python/: animate_C91.py  animate_currie2020.py  animate_tri_layer.py  batch_laxliu.py  fv2d_utils.py  generate_tri_layer_IC.py  geo_sod.py  laxliu.py  plot_H84.py  plot_TTPrime.py  plot_contributions.py  plot_dE_dt.py  plot_energy_evolution.py  plot_field.py  plot_mutli_dEdt.py  plot_rotated_tube.py  plot_slice.py  plot_sod_mag.py  plots.py  render_animation.py  render_animation_1D.py
riemann/: fivewaves.h  fslp.h  hll.h  hllc.h  hlld.h  idealGLM.h
settings/: C2020_S3.ini  C2020_S7.ini  C91.ini  C91_frite.ini  Currie2020.ini  Currie2020.ini~  H84_chi1.5.ini  README.md  blast.ini  blast.ini~  blast_mhd_low_beta.ini  blast_mhd_standard.ini  brio_wu2.ini  cspline.ini  dai_woodward.ini  diffusion.ini  expansion1.ini  expansion2.ini  field_loop_advection.ini  geoblast.ini  gresho_vortex.ini  hot_bubble.ini  implosion.ini  iso3.ini  kelvin_helmholtz.ini  kelvin_helmoltz.ini  laxliu.ini  polyfit.ini  (+15 more)
(+61 files in other folders)
